added new changes

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
             <div class="page-wrapper">
               <div class="ray-grid">
                 <div>
-                  <h1>Hello, I am Uchenna</h1>
+                  <h1 class="hero-two-columns-title">Hello, I am Uchenna</h1>
                   <div class="hero-two-colums">
-                    <p>A software engineer and entrepreneur based in Nigeria, With over 2 year of experience in Software, Web and Mobile Development.</p>
+                    <p>A software engineer and entrepreneur based in India, With over 2 year of experience in Software, Web and Mobile Development.</p>
                   </div>
                   <div class="hero-two-columns_buttons_wrapper hero-two-columns_two-buttons">
                     <div class="hero-two-columns-button">
@@ -70,10 +70,41 @@
                       </button>
                     </div>
                   </div>
+                  <div class="hero-two-columns__subtitle">
+                    <div>Full access. No credit card required. Used by over 90,000 companies.</div>
+                  </div>
                 </div>
                 <div>
                   <div class="hero-two-columns-animation">
                     <img src="./assets/img/animation-image.gif" class="intro-animation-img" />
+                  </div>
+                  <!-- <div class="hero-two-columns_feature-container">
+                    <div class="pulsating-circle"></div>
+                    <div class="hero-two-columns_feature">
+                      <span class="hero-two-columns_feature_text">Code :</span><a href="#" class="hero-two-columns__feature"> Get more leads on any Pipedrive plan with LeadBooster <span class="hero-two-columns-feature-arrow"></span></a> 
+                    </div>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="home-banner">
+            <div class="page-wrapper">
+              <div class="cards">
+                <h2>Services Offers</h2>
+                <span>
+                  <p>Pipedrive is full of features that help you prioritize deals, track performance and predict revenue</p>
+                </span>
+                <div class="card-block">
+                  <div class="grid-borders grid-borders-desktop-per-row-3 grid-borders-remove-last-3">
+                    <div class="card-block-wrapper card-block-col3">
+                      <div class="card card-features"></div>
+                      <div class="card card-features"></div>
+                      <div class="card card-features"></div>
+                      <div class="card card-features"></div>
+                      <div class="card card-features"></div>
+                      <div class="card card-features"></div>
+                    </div>
                   </div>
                 </div>
               </div>
