added new changes to the code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="header-window-logo">
                         <a href="#" class="header-logo">
                             <div class="logo">
-                                <img class="logo-animation" src="assets/img/logo.png" />
+                                <img class="logo-animation" src="assets/img/group.png" />
                             </div>
                         </a>
                     </div>
@@ -78,12 +78,6 @@
                   <div class="hero-two-columns-animation">
                     <img src="./assets/img/animation-image.gif" class="intro-animation-img" />
                   </div>
-                  <!-- <div class="hero-two-columns_feature-container">
-                    <div class="pulsating-circle"></div>
-                    <div class="hero-two-columns_feature">
-                      <span class="hero-two-columns_feature_text">Code :</span><a href="#" class="hero-two-columns__feature"> Get more leads on any Pipedrive plan with LeadBooster <span class="hero-two-columns-feature-arrow"></span></a> 
-                    </div>
-                  </div> -->
                 </div>
               </div>
             </div>
@@ -91,25 +85,124 @@
           <section class="home-banner">
             <div class="page-wrapper">
               <div class="cards">
-                <h2>Services Offers</h2>
+                <h2>What do i offer ?</h2>
                 <span>
                   <p>Pipedrive is full of features that help you prioritize deals, track performance and predict revenue</p>
                 </span>
                 <div class="card-block">
-                  <div class="grid-borders grid-borders-desktop-per-row-3 grid-borders-remove-last-3">
+                  <div class="grid-borders grid-borders-desktop-per-row-3 grid-borders-remove-last-3 grid-borders-mobile-per-row-1">
                     <div class="card-block-wrapper card-block-col3">
-                      <div class="card card-features"></div>
-                      <div class="card card-features"></div>
-                      <div class="card card-features"></div>
-                      <div class="card card-features"></div>
-                      <div class="card card-features"></div>
-                      <div class="card card-features"></div>
+                      <div class="card card-features">
+                        <a class="card-link">
+                          <div class="card-wrapper card-wrapper-clickable-with-borders">
+                            <div class="card-inner">
+                              <div class="card-image-container">
+                                <div>
+                                  <img />
+                                </div>
+                              </div>
+                              <div class="card-content">
+                                <h5 class="card-title">Web & Mobile Dev</h5>
+                                <small class="card-text">We will help you build custom web and mobile app that will bring your idea's into reality.</small>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="card card-features">
+                        <a class="card-link">
+                          <div class="card-wrapper card-wrapper-clickable-with-borders">
+                            <div class="card-inner">
+                              <div class="card-image-container">
+                                <div>
+                                  <img />
+                                </div>
+                              </div>
+                              <div class="card-content">
+                                <h5 class="card-title">UI/UX Design</h5>
+                                <small class="card-text">We will build your idea into design with the best of design and user experience that will bring your idea intro reality.</small>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="card card-features">
+                        <a class="card-link">
+                          <div class="card-wrapper card-wrapper-clickable-with-borders">
+                            <div class="card-inner">
+                              <div class="card-image-container">
+                                <div>
+                                  <img />
+                                </div>
+                              </div>
+                              <div class="card-content">
+                                <h5 class="card-title">Sales & Marketing</h5>
+                                <small class="card-text">We will help you build custom web and mobile app that will bring your idea's into reality.</small>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="card card-features">
+                        <a class="card-link">
+                          <div class="card-wrapper card-wrapper-clickable-with-borders">
+                            <div class="card-inner">
+                              <div class="card-image-container">
+                                <div>
+                                  <img />
+                                </div>
+                              </div>
+                              <div class="card-content">
+                                <h5 class="card-title">QA & Testing</h5>
+                                <small class="card-text">We make sure that the website works perfectly across all devices, browsers, screens, at any load and environment.</small>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="card card-features">
+                        <a class="card-link">
+                          <div class="card-wrapper card-wrapper-clickable-with-borders">
+                            <div class="card-inner">
+                              <div class="card-image-container">
+                                <div>
+                                  <img />
+                                </div>
+                              </div>
+                              <div class="card-content">
+                                <h5 class="card-title">Search Engine Optimisation</h5>
+                                <small class="card-text">We will bring your business and web into search results so that you can be found and can generate leads for your business.</small>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                      <div class="card card-features">
+                        <a class="card-link">
+                          <div class="card-wrapper card-wrapper-clickable-with-borders">
+                            <div class="card-inner">
+                              <div class="card-image-container">
+                                <div>
+                                  <img />
+                                </div>
+                              </div>
+                              <div class="card-content">
+                                <h5 class="card-title">Branding</h5>
+                                <small class="card-text">We will help you design, build and strategise your business to have to whole new feel and love towards your business.</small>
+                              </div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </section>
+          <!-- <section class="home-banner">
+            <div class="page-wrapper"></div>
+          </section> -->
         </div>
     </div>
     <!-- Js -->
