added new changes

--- a/index.html
+++ b/index.html
@@ -200,9 +200,38 @@
               </div>
             </div>
           </section>
-          <!-- <section class="home-banner">
+          <section class="home-banner section-theme-light-gray">
             <div class="page-wrapper"></div>
-          </section> -->
+          </section>
+          <div class="footer section-theme-dark-gray section-full-width">
+            <div class="page-wrapper">
+              <div class="cta-block">
+                <h3>Join the sales experts</h3>
+                <p class="para-desc mx-auto">Obviously I'm a Web Designer. Experienced with all stages of the development cycle for dynamic web projects.</p>
+                <ul class="list-unstyled mt-4">
+                  <li class="list-inline-item">
+                    <a href="#"><img src="assets/img/FacebookIcon.png" /></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="#"><img src="assets/img/LinkedInIcon.png" /></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="#"><img src="assets/img/instagram.png" /></a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="#"><img src="assets/img/TwitterIcon.png" /></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <footer class="footer footer-bar section-theme-dark-gray">
+            <div class="page-wrapper">
+              <div class="cta-block">
+                <p class="pb-footer-bottom-text">© 2020 Codehomie. Design with&nbsp; ❤&nbsp;by <a href="#">Uchenna Ibe</a></p>
+              </div>
+            </div>
+          </footer>
         </div>
     </div>
     <!-- Js -->
