--- a/index.html
+++ b/index.html
@@ -200,10 +200,40 @@
               </div>
             </div>
           </section>
-          <section class="home-banner section-theme-light-gray">
-            <div class="page-wrapper"></div>
+          <section id="owner-message" class="section-theme-dark-gray section-full-width section-no-padding">
+            <div class="page-wrapper section-no-vertical-padding">
+              <div class="testimonials-big testimonials-big--single-quote testimonials-big--align-right">
+                <div class="testimonials-big-header">
+                  <h2 class="testimonials-big-title"> Make sales success inevitable with Pipedrive </h2>
+                  <div class="testimonials-big-text">
+                    <p>Try Pipedrive free for 14 days. Full access. No credit card required.</p>
+                  </div>
+                  <div class="testimonials-big-button">
+                    <a class="pb-button pb-button--xl ray-button-green" >View Portfolio</a>
+                  </div>
+                </div>
+                <div class="testimonials-big-block testimonials-big-block-spacing">
+                  <div class="testimonials-big-column testimonials-big-column--dark">
+                    <div class="testimonials-big-image-container">
+                      <img alt="Uchenna ibe" title="Uchenna ibe" class="testimonials-big-image" src="" />
+                    </div>
+                    <div class="testimonials-big-quote">
+                      <div class="testimonials-big-quote-text">
+                        <span class="testimonials-big-quote-image testimonials-big-quote-image-green"></span> 
+                          You can't control results, but you can control the actions that drive deals towards completion.
+                        <small class="testimonials-big-author">
+                          <strong>Uchenna Ibe,</strong>
+                          <br>
+                           Co-founder and Chairman of the Board
+                        </small>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
-          <div class="footer section-theme-dark-gray section-full-width">
+          <div class="footer section-theme-light-gray section-full-width">
             <div class="page-wrapper">
               <div class="cta-block">
                 <h3>Join the sales experts</h3>
@@ -225,7 +255,7 @@
               </div>
             </div>
           </div>
-          <footer class="footer footer-bar section-theme-dark-gray">
+          <footer class="footer footer-bar section-theme-light-gray">
             <div class="page-wrapper">
               <div class="cta-block">
                 <p class="pb-footer-bottom-text">© 2020 Codehomie. Design with&nbsp; ❤&nbsp;by <a href="#">Uchenna Ibe</a></p>
